Use squiggles for fancy spaces and fix issues with spacing.
This fixes bugs 640 and 1273.

svn path=/src/trunk/Pootle/; revision=13342

--- a/html/style.css
+++ b/html/style.css
@@ -1482,7 +1482,8 @@ table[dir="rtl"] td.translate-original
     max-width: 100%;
     min-height: 1.5em;
     overflow: auto;
-    padding: 0 10px 0 10px;
+    padding: 1px 10px;
+    line-height: 1.3;
 }
 
 .translation-text-headers
@@ -1493,11 +1494,12 @@ table[dir="rtl"] td.translate-original
 
 .translation-space
 {
-    border-bottom: 1px solid #BBB;
-    margin: 0em 0.2em 0em 0.2em;
-    padding: 0em 0.2em 0em 0.2em;
-    width: 0px;
-    letter-spacing: -0.5em;
+    padding: 0 4px 2px;
+    margin: 0 0.2em;
+    background-image: url('images/squiggle.png');
+    background-repeat: repeat-x;
+    background-position: text-bottom;
+    vertical-align: text-top;
 }
 
 /* ORIGINAL */
